--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SnappBoxTest</string>
+    <string name="rial">ریال</string>
+    <string name="accept_offer">قبول درخواست</string>
 </resources>
