--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="accept_offer">قبول درخواست</string>
     <string name="origin_address_placeholder">مبدا  %1$s</string>
     <string name="dest_address_placeholder">مقصد  %1$s</string>
+    <string name="alert_dialog_positive_button_text">باشه</string>
+    <string name="alert_dialog_overlay_permission_text">برای اجرای برنامه احتیاج به دسترسی شما برای نمایش برنامه وقتی که برنامه در پیش‌زمینه است داریم.</string>
 </resources>
