--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dest_address_placeholder">مقصد  %1$s</string>
     <string name="alert_dialog_positive_button_text">باشه</string>
     <string name="alert_dialog_overlay_permission_text">برای اجرای برنامه احتیاج به دسترسی شما برای نمایش برنامه وقتی که برنامه در پیش‌زمینه است داریم.</string>
+    <string name="offer_accepted">پیشنهاد پذیرفته شد!</string>
 </resources>
